--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>XmlFly</title>
   <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
