--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/xmlfly-32.png">
 </head>
 <body>
   <app-root></app-root>
