feat: new icon (closes #18)

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="./">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+  <link rel="icon" href="assets/icons/32x32.png" sizes="32x32" />
 </head>
 <body>
   <app-root></app-root>
